--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# Gradle
+.gradle/
+build/
+out/
 
-# Build Logs
-build_log*.txt
+# Java
+*.class
+*.log
+*.ctxt
+.mtj.tmp/
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/
+.settings/
+.classpath
+.project
+bin/
