--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.daemon=true
 kotlin.code.style=official
 
 # Mod Properties
-mod_version=1.6.2
+mod_version=1.8.4
 maven_group=net.vanillaoutsider
 archives_base_name=bat_ecology
 
 # Dependencies
-minecraft_version=26.1-snapshot-5
+minecraft_version=26.1-snapshot-6
 yarn_mappings=none
 loader_version=0.18.4
 fabric_version=0.143.0+26.1
-dasik_lib_path=e:/Minecraft Project/DasikLibrary/build/libs/dasik-library-1.3.0.jar
+dasik_lib_path=../../DasikLibrary/build/libs/dasik-library-1.6.3.jar
 loom_version=1.15-SNAPSHOT
 
 # Loom
@@ -22,4 +22,4 @@ loom.suppressJavaCompatibilityChecks=true
 
 # Java Version (Protocol 15)
 java_version=25
-# org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-25.0.2.10-hotspot
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-25.0.2.10-hotspot
